# vendored_invoke

./: invoke  pyproject.toml  workflow
_CI/: __init__.py  backbone  pyproject.toml  template-workflow  vendor.txt
_CI/lib/: vendor.txt
_CI/lib/patches/: path_inject.patch
_CI/lib/tasks/: __init__.py  configuration.py  helpers.py  other.py  template.py  utils.py  vendored.py
_CI/libs/: vendor.txt
_CI/patches/: path_inject.patch
_CI/tasks/: __init__.py  configuration.py  helpers.py  tasks.py  vendored.py
